corecciones en rutas
