# src/router/turnos.routes.js
@@ -1,5 +1,6 @@
 import express from 'express';
 import TurnosController from '../controllers/turnos.controller.js';
+import PacientesController from '../controllers/pacientes.controller.js';
 import {
     validarTurnoAtendido
 } from '../validators/turnos.validator.js';
@@ -13,6 +14,14 @@ const router = express.Router();
 const transformador = new TransformarDTO();
 
 const turnosController = new TurnosController();
+
+const pacientesController = new PacientesController();
+
+router.get('/informe-pacientes',
+    verificarToken,
+    permitirRoles(3),
+    pacientesController.obtenerInformeTurnosPorPaciente
+);
 
 router.patch('/:id/atendido',
     verificarToken,
