# src/swagger/pacientes.yml
@@ -62,7 +62,7 @@ paths:
         403:
           description: Prohibido - Requiere rol de Paciente (Rol 2)
 
-  /pacientes/turnosPropiosDePaciente:
+  /pacientes/turnos:
     get:
       summary: Listar turnos propios del Paciente (Solo Rol 2)
       tags:
@@ -158,37 +158,3 @@ paths:
           description: Token inválido o ausente
         403:
           description: Permisos insuficientes (Requiere Administrador - Rol 3)
-
-  /pacientes/informe/turnos-paciente:
-    get:
-      summary: Obtener informe estadístico de turnos por paciente en formato PDF (Solo Admin - Rol 3)
-      tags:
-        - Pacientes
-        - Administrador
-      security:
-        - BearerAuth: []
-      responses:
-        200:
-          description: Archivo PDF generado correctamente con las estadísticas de atenciones.
-          content:
-            application/pdf:
-              schema:
-                type: string
-                format: binary
-        401:
-          description: Token inválido o ausente.
-        403:
-          description: Permisos insuficientes (Requiere Rol 3).
-        500:
-          description: Error interno al generar el reporte PDF.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  exito:
-                    type: boolean
-                    example: false
-                  mensaje:
-                    type: string
-                    example: "Error al renderizar el informe con la librería de PDF."
